deploy/istio-resources.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: istio-api-ingress
  namespace: istio-gateway
  # annotations:
  #   # kubernetes.io/ingress.class: nginx
  #   # nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
  #   # nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: api.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: istio-gateway
                port:
                  name: http2

---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: api-gateway
  namespace: istio-gateway
spec:
  selector:
    istio: gateway
  servers:
    - hosts:
        - api.local
      port:
        name: http
        number: 80
        protocol: HTTP

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: api-vs
  namespace: default
spec:
  gateways:
    - istio-gateway/api-gateway
  hosts:
    - api.local
  http:
    - route:
        - destination:
            host: api.default.svc.cluster.local
            port:
              number: 80
          weight: 100
